--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A hapi MongoDB plugin",
   "main": "lib/index.js",
   "engines": {
-    "node": "4.2.x",
-    "npm": "2.14.x"
+    "node": ">=4.2.x"
   },
   "scripts": {
     "test": "lab -L -a code -t 100",
@@ -27,12 +26,12 @@
   },
   "homepage": "https://github.com/pagerinc/hapi-mongo#readme",
   "dependencies": {
-    "hoek": "^3.0.4",
-    "mongoose": "^4.2.5"
+    "hoek": "3.x.x",
+    "mongoose": "4.x.x"
   },
   "devDependencies": {
     "code": "2.x.x",
-    "hapi": "11.x.x",
-    "lab": "7.x.x"
+    "hapi": "12.x.x",
+    "lab": "8.x.x"
   }
 }
