--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "url": "https://github.com/pagerinc/hapi-mongo/issues"
   },
   "homepage": "https://github.com/pagerinc/hapi-mongo#readme",
-  "dependencies": {
+  "peerDependencies": {
     "hoek": "3.x.x",
     "mongoose": "4.x.x"
   },
   "devDependencies": {
     "code": "2.x.x",
     "hapi": "12.x.x",
-    "lab": "8.x.x"
+    "hoek": "3.x.x",
+    "lab": "8.x.x",
+    "mongoose": "4.x.x"
   }
 }
