--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A hapi MongoDB plugin",
   "main": "lib/index.js",
   "engines": {
-    "node": ">=4.2.x"
+    "node": ">=8.x.x"
   },
   "scripts": {
     "test": "lab -L -a code -t 100",
@@ -26,12 +26,12 @@
   },
   "homepage": "https://github.com/pagerinc/hapi-mongo#readme",
   "dependencies": {
-    "hoek": "4.x.x",
+    "hoek": "5.x.x",
     "mongoose": "5.x.x"
   },
   "devDependencies": {
     "code": "5.x.x",
-    "hapi": "16.x.x",
-    "lab": "14.x.x"
+    "hapi": "17.x.x",
+    "lab": "15.x.x"
   }
 }
