--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pager/hapi-mongo",
-  "version": "5.0.1",
+  "version": "6.0.0-beta.0",
   "description": "A hapi MongoDB plugin",
   "main": "lib/index.js",
   "engines": {
