--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pager/hapi-mongo",
-  "version": "6.0.0-beta.1",
+  "version": "6.0.0",
   "description": "A hapi MongoDB plugin",
   "main": "lib/index.js",
   "engines": {
@@ -26,12 +26,12 @@
   },
   "homepage": "https://github.com/pagerinc/hapi-mongo#readme",
   "dependencies": {
-    "hoek": "5.x.x",
+    "hoek": "6.x.x",
     "mongoose": "5.x.x"
   },
   "devDependencies": {
     "code": "5.x.x",
-    "hapi": "17.x.x",
-    "lab": "17.x.x"
+    "hapi": "18.x.x",
+    "lab": "18.x.x"
   }
 }
