--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@pager/hapi-mongo",
-  "version": "5.0.2-rc.1",
+  "version": "6.0.0",
   "description": "A hapi MongoDB plugin",
   "main": "lib/index.js",
   "engines": {
-    "node": ">=4.2.x"
+    "node": ">=10.x.x"
   },
   "scripts": {
     "test": "lab -L -a code -t 100",
@@ -26,12 +26,12 @@
   },
   "homepage": "https://github.com/pagerinc/hapi-mongo#readme",
   "dependencies": {
-    "hoek": "4.x.x",
+    "hoek": "6.x.x",
     "mongoose": "5.x.x"
   },
   "devDependencies": {
     "code": "5.x.x",
-    "hapi": "16.x.x",
-    "lab": "14.x.x"
+    "hapi": "18.x.x",
+    "lab": "18.x.x"
   }
 }
