--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A hapi MongoDB plugin",
   "main": "lib/index.js",
   "engines": {
-    "node": ">=10.x.x"
+    "node": ">=10.x"
   },
   "scripts": {
-    "test": "lab -L -a code -t 100",
+    "test": "lab",
     "test-cov-html": "lab -a code -r html -o coverage.html"
   },
   "repository": {
@@ -16,22 +16,35 @@
   },
   "keywords": [
     "hapi",
-    "rod",
-    "mongo"
+    "mongo",
+    "mongoose"
   ],
-  "author": "Gaston Festari <gaston@pager.com>",
+  "author": "Pager Engineering <engineering@pager.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/pagerinc/hapi-mongo/issues"
   },
   "homepage": "https://github.com/pagerinc/hapi-mongo#readme",
   "dependencies": {
-    "hoek": "6.x.x",
-    "mongoose": "5.x.x"
+    "hoek": "^6.1.3"
   },
   "devDependencies": {
-    "code": "5.x.x",
-    "hapi": "18.x.x",
-    "lab": "18.x.x"
+    "code": "^5.2.4",
+    "hapi": "^18.1.0",
+    "lab": "^18.0.2"
+  },
+  "peerDependencies": {
+    "mongoose": "^5.10.11"
+  },
+  "renovate": {
+    "extends": [
+      "github>pagerinc/renovate-config"
+    ],
+    "lockFileMaintenance": {
+      "enabled": false
+    }
+  },
+  "release": {
+    "extends": "@pager/semantic-release-config"
   }
 }
