--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
   },
   "homepage": "https://github.com/pagerinc/hapi-mongo#readme",
   "dependencies": {
-    "hoek": "^6.1.3"
+    "@hapi/hoek": "^9.1.0"
   },
   "devDependencies": {
-    "code": "^5.2.4",
-    "hapi": "^18.1.0",
-    "lab": "^18.0.2"
+    "@hapi/code": "^8.0.2",
+    "@hapi/hapi": "^20.0.1",
+    "@hapi/lab": "^24.1.0",
+    "@pager/eslint-config": "^1.1.1",
+    "@pager/semantic-release-config": "^1.3.1",
+    "eslint": "^7.12.1",
+    "semantic-release": "^17.2.1"
   },
   "peerDependencies": {
     "mongoose": "^5.10.11"
