--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@pager/eslint-config": "^1.1.1",
     "@pager/semantic-release-config": "^1.3.1",
     "eslint": "^7.12.1",
+    "mongoose": "^5.10.11",
     "semantic-release": "^17.2.1"
   },
   "peerDependencies": {
